# hf-for-legal

./: CITATION.cff  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
notebooks/: Dataset_formatting.ipynb  dataset_formatting.ipynb
src/hf_for_legal/: __init__.py  _decorators.py  _logger.py  datasets.py
tests/: dataset_test.py
