[project]
name = "hf-for-legal"
version = "0.0.13"
description = "HF for Legal: A Community Package for Legal Applications 🤗"
readme = "README.md"
keywords = ["language-models", "retrieval", "web-scraping", "gpl", "nlp", "hf-for-legal", "machine-learning", "retrieval-augmented-generation", "RAG", "huggingface", "generative-ai", "llama", "Mistral", "inference-api", "datasets", "llm-as-judge"]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
license = { text = "Apache License 2.0" }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[options]
packages = ["find:"]
install_requires = [
    "datasets",
    "numpy",
    "tqdm"
]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]

[tool.env]
PYTHONPATH = "src"

[metadata]
name = "hf-for-legal"
version = "0.0.13"
author = "Louis Brulé Naudet"
author_email = "louisbrulenaudet@icloud.com"
description = "HF for Legal: A Community Package for Legal Applications 🤗"
long_description = "file: README.md"
long_description_content_type = "text/markdown"
url = "https://github.com/louisbrulenaudet/hf-for-legal"
homepage = "https://github.com/louisbrulenaudet/hf-for-legal"
project_urls = {repository = "https://github.com/louisbrulenaudet/hf-for-legal"}
keywords = "language-models retrieval few-shot-learning nlp machine-learning hf-for-legal ai llama generative-ai huggingface inference-api datasets llm-as-judge mistral llama retrieval-augmented-generation"