[metadata]
name = hf-legal-tools
version = 0.0.12
author = Louis Brulé Naudet
author_email = louisbrulenaudet@icloud.com
description = HF for Legal: A Community Package for Legal Applications
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/louisbrulenaudet/hf-for-legal
project_urls =
    Homepage = https://github.com/louisbrulenaudet/hf-for-legal
    Repository = https://github.com/louisbrulenaudet/hf-for-legal
keywords =
    language-models
    retrieval
    few-shot-learning
    nlp
    machine-learning
    hf-for-legal
    ai
    llama
    generative-ai
    huggingface
    inference-api
    datasets
    llm-as-judge
    mistral
    llama
    retrieval-augmented-generation
classifiers =
    Programming Language :: Python
    Programming Language :: Python :: 3
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = find:
install_requires =
    datasets
    numpy
    tqdm

[options.extras_require]
dev =
    pytest

[tool:pytest]
testpaths = tests

[tool.env]
PYTHONPATH = src
